slideshow is the name, not gallery

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,11 @@
+defaults:
+  -
+    scope:
+      path: "_slides" 
+    values:
+      layout: "iframe"
+
 collections:
-  galleries:
+  slides:
     output: true
 
